# R3d91lls-LLM-Tools

./: .gitignore  README.md  system-benchmarking-tools-install.sh  workstation-setup.sh
GithubSRPGen/: SPREnabledGitRepo.md  UnitTest-ContentProcessorClass.py  github_spr_generator.py
GithubSRPGen/tests/: UnitTest-ContentSorterClass.py  UnitTest-DirectoryManagerClass.py  savedjson.json
LadonStack/: README.md  custom-counters.csv  default-counters.csv  docker-compose.yml  prometheus.yml
LadonStack/grafana-config/: grafana.ini
MyLLM/: .dockerignore  Dockerfile  README.md  basic_rag.py  config.yaml  docker-compose.yml  models  pyproject.toml  requirements.txt
MyLLM/documents/: Consolidated_Core_System_Components.md  HADES_Actor-Network_Theory_Basis.md
MyLLM/old/: Dockerfile.base  build_base.sh  config.yaml  docker-compose.yml  myllm.py  new-myllm.py  new-requirements.txt  requirements.txt  vector_store_ops.py
No-Stop/: nostopwords-example.py
RAG_tools/: .gitignore
RAG_tools/config/: docker-compose.yml
RAG_tools/notebooks/: 00_Environment_Setup.ipynb  01_Database_Setup.ipynb  02_Ollama_setup.ipynb  03_CLI_Implementation.ipynb
SRP-tool/: SSaC-V3.py  updated_SSaC.py
ScanToTextPDF/: OpticalToTextPDF.py  TextPDF2Text.py  requirements.txt
ScrapeSortAndClean/: SSaC-V2.py  SSaC.py  SaS.py  Scrape-Sort-and-Clean.md  example.md  find-dup-files.py  markdown-file-clean.py  page-scraper.py  srape-sort-and-clean.py
code2flow/: code2dot.py  code2flow.py  flowchart.dot
functions/: github_issues_analysis.py  github_search.py  rxt-stockprice.py  search_github.py
(+17 files in other folders)
